[package]
name = "clinte"
version = "0.4.2"
authors = ["Ben Morrison <ben@gbmor.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
lazy_static = "^1.4"
log = "^0.4"
rusqlite = "^0.20"
simplelog = "^0.7"
users = "^0.9"

[dependencies.clap]
version = "^2.33"
default-features = false
features = [ "suggestions", "color" ]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = true
overflow-checks = false
