[package]
name = "clinte"
version = "2.1.4"
authors = ["Ben Morrison <ben@gbmor.dev>"]
edition = "2018"
description = "CLI note posting system for shared UNIX boxes."
repository = "https://git.sr.ht/~gbmor/clinte"
readme = "README.md"
keywords = ["social", "unix", "notes", "messages"]
categories = ["command-line-utilities"]
license = "ISC"

[badges]
travis-ci = { repository = "gbmor/clinte", branch = "master" }
codecov = { repository = "gbmor/clinte", branch = "master", service = "github" }
maintenance = { status = "stable" }

[dependencies]
chrono = "^0.4"
fd-lock = "^1.1"
lazy_static = "^1.4"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
simplelog = "^0.7"
users = "^0.9"

[dependencies.clap]
version = "^2.33"
default-features = false
features = [ "suggestions", "color" ]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = true
overflow-checks = false
